--- a/css/styles.css
+++ b/css/styles.css
@@ -254,6 +254,9 @@
       max-width: 96rem;
     }
   }
+  .m-0 {
+    margin: calc(var(--spacing) * 0);
+  }
   .mx-6 {
     margin-inline: calc(var(--spacing) * 6);
   }
@@ -669,6 +672,9 @@ h2 {
   letter-spacing: 0.05em;
   color: var(--color-slate-400);
   margin-bottom: 0.5rem;
+}
+h2.m-0 {
+  margin: 0;
 }
 .h2-bold {
   color: var(--color-slate-900);
